--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,14 @@ highlighter:      pygments
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            
+tagline:          
+description:      
+url:              
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'FlowersAtDusk'
 
 paginate:         5
 
@@ -22,7 +21,7 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/flowersatdusk/flowersatdusk.github.io
 
 # Gems
-plugins: 	 [jekyll-paginate, jekyll-gist]
+plugins: 	        [jekyll-paginate, jekyll-gist]
