start first post

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url:
 baseurl:          /
 
 author:
-  name:           'FlowersAtDusk'
+  name:           
 
 paginate:         5
 
@@ -25,3 +25,9 @@ github:
 
 # Gems
 plugins: 	        [jekyll-paginate, jekyll-gist]
+
+# Disqus Comments
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: flowersatdusk
