add image to sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ description:
 url:              
 baseurl:          /
 
+url:              "https://flowersatdusk.github.io"
+
 author:
   name:           
 
