--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/flowersatdusk/flowersatdusk.github.io
+  repo:           https://github.com/flowersatdusk
 
 # Gems
 plugins: 	        [jekyll-paginate, jekyll-gist]
